Исправила замечания по первому ревью