@@ -6,14 +6,14 @@ import com.yandex.tracker.model.Task;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 class InMemoryHistoryManagerTest {
 
     public static HistoryManager historyManager;
-    public static ArrayList<Task> history;
+    public static LinkedList<Task> history;
 
     @BeforeEach
     public void beforeEach() {
@@ -25,15 +25,17 @@ class InMemoryHistoryManagerTest {
     public void shouldAddTask() {
         Task task = new Task("Задача", "Описание задачи", TaskStatus.NEW);
         historyManager.add(task);
+        history = historyManager.getHistory();
 
         assertNotNull(history, "После добавления задачи, история не должна быть пустой.");
         assertEquals(1, history.size(), "После добавления задачи, история не должна быть пустой.");
 
         task.setStatus(TaskStatus.IN_PROGRESS);
         historyManager.add(task);
+        history = historyManager.getHistory();
 
         assertEquals(2, history.size(), "После добавления задачи, история не должна быть пустой.");
-        assertEquals(TaskStatus.NEW, historyManager.getHistory().get(0).getStatus(),
+        assertEquals(TaskStatus.NEW, historyManager.getHistory().getFirst().getStatus(),
                 "После обновления статуса задачи, предыдущая версия данных должна сохраняться.");
     }
 
@@ -41,30 +43,36 @@ class InMemoryHistoryManagerTest {
     public void shouldAddEpic() {
         Task epic1 = new Epic("Эпик", "Описание эпика");
         historyManager.add(epic1);
+        history = historyManager.getHistory();
 
         assertNotNull(history, "После добавления задачи, история не должна быть пустой.");
         assertEquals(1, history.size(), "После добавления задачи, история не должна быть пустой.");
 
         epic1.setStatus(TaskStatus.IN_PROGRESS);
         historyManager.add(epic1);
-        assertEquals(TaskStatus.NEW, historyManager.getHistory().get(0).getStatus(),
+        history = historyManager.getHistory();
+
+        assertEquals(TaskStatus.NEW, historyManager.getHistory().getFirst().getStatus(),
                 "После обновления статуса задачи, предыдущая версия данных должна сохраняться.");
     }
 
     @Test
     public void shouldAddSubtask() {
         TaskManager taskManager = new InMemoryTaskManager();
-        Task epic1 = new Epic("Эпик", "Описание эпика");
-        int epicId = taskManager.addNewEpic((Epic) epic1);
+        Epic epic1 = new Epic("Эпик", "Описание эпика");
+        int epicId = taskManager.addNewEpic(epic1);
         Subtask subtask1 = new Subtask("Подзадача", "Описание подзадачи", TaskStatus.NEW, epicId);
         historyManager.add(subtask1);
+        history = historyManager.getHistory();
 
         assertNotNull(history, "После добавления задачи, история не должна быть пустой.");
         assertEquals(1, history.size(), "После добавления задачи, история не должна быть пустой.");
 
         subtask1.setStatus(TaskStatus.IN_PROGRESS);
         historyManager.add(subtask1);
-        assertEquals(TaskStatus.NEW, historyManager.getHistory().get(0).getStatus(),
+        history = historyManager.getHistory();
+
+        assertEquals(TaskStatus.NEW, historyManager.getHistory().getFirst().getStatus(),
                 "После обновления статуса задачи, предыдущая версия данных должна сохраняться.");
     }
 }
